# blopp

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  blopp.hpp  format_specification.md
.github/workflows/: codeql.yaml  github-build-and-test.yaml  github-codeql.yaml  github-fuzz.yaml  github-run-tests.yml
fuzz/: CMakeLists.txt  blopp_fuzz.cpp
include/: blopp.hpp
tests/: CMakeLists.txt  static_tests.cpp  structs.hpp
tests/include/: blopp_test.hpp  blopp_test_binary_format_types.hpp
tests/src/: blopp_tests.cpp  blopp_tests_conversion_overflows.cpp  blopp_tests_filesystem.cpp  blopp_tests_fuzz.cpp  blopp_tests_fuzz_fails.cpp  blopp_tests_main.cpp  blopp_tests_readme.cpp  blopp_tests_type_array.cpp  blopp_tests_type_c_array.cpp  blopp_tests_type_enum.cpp  blopp_tests_type_fundamentals.cpp  blopp_tests_type_list.cpp  blopp_tests_type_map.cpp  blopp_tests_type_multimap.cpp  blopp_tests_type_object.cpp  blopp_tests_type_object_format.cpp  blopp_tests_type_object_map.cpp  blopp_tests_type_optional.cpp  blopp_tests_type_shared_ptr.cpp  blopp_tests_type_string.cpp  blopp_tests_type_unique_ptr.cpp  blopp_tests_type_variant.cpp  blopp_tests_type_vector.cpp
